node-js-app/back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  namespace: sample-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      containers:
      - image: 657126973073.dkr.ecr.us-east-1.amazonaws.com/apirepo:0.1
        name: backend-api
        ports:
          - containerPort: 3000


---

 
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: sample-app
spec:
  selector:
    app: backend-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
