node-js-app/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: 657126973073.dkr.ecr.us-east-1.amazonaws.com/nodejsapp:0.1
        name: frontend
        ports:
          - containerPort: 80

---


apiVersion: v1
kind: Service
metadata:
  name: front-svc
  namespace: sample-app
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
